tests/plugin/syntax-error/stderr.txt
  File "tests/plugin/syntax-error/script.py", line 18
    Test handling of Python syntax errors.
                ^
SyntaxError: invalid syntax
